Ensure correct lifetimes of Cef objects by implementing reference-counting.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ repository = "https://github.com/peter-suggate/cef-rs"
 build = "build.rs"
 
 [dependencies]
-cef-sys = { git = "https://github.com/peter-suggate/cef-sys" }
+# cef-sys = { git = "https://github.com/peter-suggate/cef-sys" }
+cef-sys = { path = "../cef-sys"}
 libc = "0.2.58"
 
 [build-dependencies]
